updated requirements.txt with faker

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.8
 dnspython==2.7.0
 email_validator==2.2.0
 exceptiongroup==1.2.2
+Faker==36.1.1
 fastapi==0.115.8
 fastapi-cli==0.0.7
 h11==0.14.0
@@ -33,6 +34,7 @@ sqlmodel==0.0.22
 starlette==0.45.3
 typer==0.15.1
 typing_extensions==4.12.2
+tzdata==2025.1
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
