added env variables to docker compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,5 +3,7 @@ services:
     build: .
     environment:
       - NEON_DB_CONNECTION_URL=${NEON_DB_CONNECTION_URL}
+      - LOGGING_FOLDER=${LOGGING_FOLDER}
+      - LOG_FILE=${LOG_FILE}
     ports:
       - "3003:3003"
