added final documentation for submission

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
-NEON_DB_CONNECTION_URL=""
+# URL TO CONNECT TO DB
+POSTGRES_CONNECTION_URL=""
+# NAME OF FILE WHERE LOGS ARE STORED
 LOG_FILE=""
+# FOLDER WHERE LOGS WILL BE STORED
 LOGGING_FOLDER=""
